--- a/vendas.html
+++ b/vendas.html
@@ -9,8 +9,10 @@
 
 <body>
     <h1>Página de vendas</h1>
-    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar para página inicial</a>
+    <h2>Histórico de vendas</h2>
+    <p>Venda 1</p>
+    <p>Venda 2</p>
 </body>
 
 </html>
