--- a/vendas.html
+++ b/vendas.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-    <h1>Página de vendas</h1>
+    <h1>Página de vendas sem histórico</h1>
     <a href="index.html">Voltar para página inicial</a>
-    <h2>Histórico de vendas</h2>
-    <p>Venda 1</p>
-    <p>Venda 2</p>
 </body>
 
 </html>
